deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-beef-fabflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team-beef-fabflix
  template:
    metadata:
      labels:
        app: team-beef-fabflix
    spec:
      containers:
        - name: team-beef-fabflix-container
          image: mingkunliu/122b-k8s-fabflix:v1
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: team-beef-fabflix-service
spec:
  selector:
    app: team-beef-fabflix
  ports:
    - name: http
      port: 8080
  type: ClusterIP
